--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,17 +4,14 @@ body {
     line-height: 1;
   }
   
-  textarea {
+  input {
     background: transparent;
-    border: none;
+    border: solid;
     resize: none;
     color: #000000;
     border-left: 1px solid black;
     padding: 10px;
-  }
-  
-  th {
-    text-align: center;
+    ;
   }
 
   .jumbotron {
@@ -73,3 +70,5 @@ body {
     font-size: 20px;
     transition: all 0.3s ease-in-out;
   }
+
+  
